Fix warning about missing @Order annotation